# API-CRUD2

./: .gitignore  .projenrc.js  .projenrc.py  Prompts.md  README.md  app.py  comparison.md  makefile  package.json  pyproject.toml  requirements.txt  secrets.enc.yaml
htmlcov/: app_py.html  class_index.html  function_index.html  index.html  status.json  z_a44f0ac069e85531_test_app_py.html  z_a44f0ac069e85531_test_prueba_funcional_py.html  z_a44f0ac069e85531_test_prueba_integracion_py.html  z_a44f0ac069e85531_test_prueba_unitaria_py.html  z_a44f0ac069e85531_test_seguridad_py.html
prueba-proyecto-poetry/: pyproject.toml
static/: style.css
templates/: create.html  index.html  update.html
tests/: .coverage  locustfile.py  test_app.py  test_prueba_funcional.py  test_prueba_integracion.py  test_prueba_unitaria.py  test_seguridad.py
tests/.pytest_cache/v/cache/: lastfailed
